k8s/todo-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-deployment-app
  template:
    metadata:
      labels:
        app: todo-deployment-app
    spec:
      containers:
        - name: todo-deployment-app
          image: todo-backend
          ports:
            - containerPort: 8080
