k8s/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-deployment-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: todo-deployment-app
  type: LoadBalancer
