k8s/todo-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 5173
      targetPort: 5173
  selector:
    app: todo-frontend
